z-ingress-demo/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
spec:
  rules:
  - http:
      paths: 
      - backend:
          serviceName: hello-service
          servicePort: 80
